# stellar-album-2026

./: .gitignore  Cargo.toml  Makefile  PRODUCT.md  README.md  SPEC.md  bootstrap.sh  caatinga.artifacts.json  caatinga.config.ts  package-lock.json  package.json  rust-toolchain.toml  upgrade.sh
.github/workflows/: ci.yml
contracts/album/src/: lib.rs
contracts/coin/src/: lib.rs
contracts/common/: Cargo.toml
contracts/common/src/: lib.rs
contracts/escrow/src/: lib.rs  test.rs
contracts/faucet/: Cargo.toml
contracts/faucet/src/: lib.rs  test.rs
contracts/pack/: Cargo.toml
contracts/pack/src/: lib.rs  test.rs
contracts/sticker/: Cargo.toml
contracts/sticker/src/: lib.rs  test.rs
contracts/store/: Cargo.toml
contracts/store/src/: lib.rs  test.rs
contracts/test-utils/: Cargo.toml
contracts/test-utils/src/: lib.rs
docs/: architecture.md  bootstrap-and-deploy.md  decisions.md  frontend-and-testnet.md  implementation-plan.md
docs/curriculum/: class-3-pack-album.md
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/scripts/: bindings.sh
frontend/src/: App.tsx  store.tsx
frontend/src/components/: Sticker.tsx  ui.tsx
frontend/src/lib/: catalog.ts  clients.ts  friendbot.ts  network.ts  stickers.ts  wallet.ts
frontend/src/pages/: Album.tsx  Guide.tsx  Shop.tsx  Trade.tsx
investigations/: sticker-self-transfer-mint.md
scripts/: .env.example  auto-claim.sh  auto-trade.sh
tests/: Cargo.toml
tests/src/: class_1.rs  class_2.rs  class_3.rs  class_4.rs  lib.rs
