[package]
name = "faucet"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
common = { path = "../common" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
test-utils = { path = "../test-utils" }
# Real Coin contract, for tests only. It is NOT a normal dependency: linking a
# second cdylib into the Faucet wasm collides on the `__constructor` symbol.
# Cross-contract calls go through the local `CoinMint` client interface instead.
coin = { path = "../coin" }

