[package]
name = "store"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
common = { path = "../common" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
test-utils = { path = "../test-utils" }
# Real Coin + Pack for tests only; cross-contract calls use local client
# interfaces to avoid cdylib symbol collisions.
coin = { path = "../coin" }
pack = { path = "../pack" }
